# FLiP

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: datasets.yaml  train_lolm.yaml  vocab_en.yaml
lolm/: __init__.py  train.py  utils.py
lolm/config/: __init__.py  loader.py
lolm/data/: builders.py  datasets.py  utils.py
lolm/models/: interpretable.py
scripts/: build_cvect.py  evaluate.py
